Styles were edited, looks better the SingUp component was renamed to the correct name, SignUp.css and SignUp. YesNoRadioButton was edited to be more readable i think index.css was edited to be more organized

--- a/placita-app/src/App.css
+++ b/placita-app/src/App.css
@@ -1,10 +1,3 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Roboto', sans-serif;
-    min-height: 100vh;   
-    width: 100vw; 
-}
 #root {
     font-family: 'Inter';
     position: absolute;
@@ -14,7 +7,7 @@ body {
     height: 100%;
 }
 
-#login-header {        
+header.thick {        
     background-color: #FFFFFF;
     padding: 20px;
     border-radius: 10px;
@@ -36,15 +29,8 @@ main.pine-background {
     display: flex;
     justify-content: center;
     align-items: start;
-    background-color: #437ca565;    
-    
+    background-color: #437ca565;        
     height: 100%;    
-}
-main.singup {
-    min-height: 700px;
-}
-main.login {
-    min-height: 600px;
 }
 
 /* Flating box*/
@@ -59,22 +45,20 @@ main.login {
     padding-right: 50px;   
     margin-top: 10vh;
     border-radius: 50px;    
-    min-height: 400px;
-}
-.floating-box.signup {
-    width: 70vw;
-    min-width: 200px;
+    min-height: 350px;
 }
 .floating-box.login {
-    max-width: 320px;
+    width: 320px;
 }
+main.login {    
+    min-height: 500px;    
+}
+
 .floating-box .input-container {    
     display: flex;
     flex-direction: column;
-    justify-content: left;
-    align-content: left;    
-    width: 70vw;
-    min-width: 100px;
+    width: 100%;    
+    min-width: 200px;
     max-width: 300px;
     margin-bottom: 20px;
 }
@@ -86,6 +70,9 @@ main.login {
     padding-left: 15px;    
     padding-top: 5px;
     padding-bottom: 5px;    
+}
+.floating-box .input-container input:focus {
+    border: unset;        
 }
 .floating-box button {
     width: 100%;
@@ -118,4 +105,20 @@ main.login {
 }
 .floating-box a {
     color: #437CA5;
+}
+
+
+@media screen and (min-width: 768px) {
+    .floating-box.signup {
+        width: 650px;
+    }
+}
+@media screen and (max-width: 768px) {
+    .floating-box.signup {        
+        width: 320px;        
+    }       
+    
+    main.signup {
+        min-height: 1000px;
+    }
 }
