--- a/placita-app/src/components/SignUp.css
+++ b/placita-app/src/components/SignUp.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-content: center;
     flex-wrap: wrap;
-    width: 70vw;
+    width: 100%;
     max-width: 630px;
     margin-bottom: 20px;
     gap: 20px;
@@ -17,7 +17,7 @@
     flex-direction: row;
     justify-content: space-around;
     align-content: left;
-    width: 70vw ;
+    width: 70vw;
     min-width: 200px;
     max-width: 310px;
     margin-bottom: 20px;
